# dagster_data_pipeline

./: .gitignore  README.md  pyproject.toml
data_pipeline/: assets.py  definitions.py  resources.py
data_pipeline_tests/: test_assets.py
input_datasets/: bank_transactions_data.csv  us_zips.csv
